fixes so that availability now functions£

--- a/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
@@ -57,19 +57,17 @@
 </div>
 {{/inline}}
 
-{{#*inline "list_item"}}
-  {{{default value.key value}}}
-{{/inline}}
+{{#*inline "list_item"}}{{{default value.key value}}}{{/inline}}
 
 {{#*inline "availability_filter"}}
   <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-availability-collapse" data-collapse-inverse="#{{../instance_id}}-availability-list" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
       Availability
     <span class="mdc-icon-toggle pull-right">
-    <i class="far fa-chevron-down" aria-hidden="true"></i>
+    <i class="far fa-chevron-{{#if @root.request.params.query.availability}}up{{else}}down{{/if}}" aria-hidden="true"></i>
   </span>
   </h3>
-  <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-availability-collapse" style="display: none;">
-    {{>opportunity_timings_selector}}
+  <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-availability-collapse" style="{{#unless @root.request.params.query.availability}}display:none{{/unless}}">
+    {{>opportunity_availability_selector type="availability"}}
   </div>
   <div id="{{../instance_id}}-availability-list">
     <ul id="{{../instance_id}}-availability-list-ul">
@@ -80,7 +78,7 @@
 {{#*inline "term_checkbox"}}
   <div class="mdc-form-field">
     <div class="mdc-checkbox">
-      <input type="checkbox" data-list-target="#{{../instance_id}}-{{field}}-list-ul" data-list-value="{{default value.key value}}" data-list-content="{{>list_item value=(default value.key value)}}"class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{slug}}"
+      <input type="checkbox" data-list-target="#{{../instance_id}}-{{field}}-list-ul" data-list-content="{{>list_item value=(default value.key value)}}"class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{slug}}"
              field="{{field}}" slug="{{slug}}"
              name="{{#compare field "===" "type"}}{{field}}{{else}}{{field}}[]{{/compare}}" value="{{slug}}"{{#if (contains selected slug)}} checked{{/if}} />
       <div class="mdc-checkbox__background">
@@ -93,9 +91,7 @@
         <div class="mdc-checkbox__mixedmark"></div>
       </div>
     </div>
-    <label for="{{instance_id}}_{{field}}_{{slug}}">
-      {{{default value.key value}}}
-    </label>
+    <label for="{{instance_id}}_{{field}}_{{slug}}">{{{default value.key value}}}</label>
   </div>
 {{/inline}}
 
@@ -149,6 +145,7 @@
     <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}">
 
     {{> availability_filter instance_id=instance_id ~}}
+
 
     {{> term_filter type="regions" instance_id=instance_id ~}}
 
