Updated DCS content links

--- a/sites/configurations/scvo/templates/pages/page-digital.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital.hbs
@@ -165,7 +165,7 @@
               </section>
               <section class="mdc-card__actions">
                 <ul>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://storage.googleapis.com/scvo-cms/scvo-cms/wp-content/uploads/2016/10/scvo_digital_senior_leaders_call_to_action_final.pdf">Read the Call to Action</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/creating-a-digitally-confident-third-sector-in-scotland-what-next">Read the Call to Action</a></li>
                 </ul>
               </section>
             </div>
