--- a/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
@@ -1,5 +1,5 @@
 {{#*inline "term_filter"}}
-<h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{type}}-collapse" data-collapse-inverse="#{{../instance_id}}-{{type}}-list" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
+<h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-checkbox-collapse-target="#{{../instance_id}}-{{type}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
   {{#compare type "===" "regions" ~}}
     Region
   {{else}}
@@ -9,7 +9,7 @@
     <i class="far fa-chevron-down" aria-hidden="true"></i>
   </span>
 </h3>
-<div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{type}}-collapse" style="display: none;">
+<div class="mdc-drawer--occasional-ie11 checkbox-toggle-display-checked" id="{{../instance_id}}-{{type}}-collapse" >
   {{#compare type "===" "regions" ~}}
     {{#if (any @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ~}}
       {{#each @root.data.opportunitySupplimentary.types.aggregations.countries.buckets ~}}
@@ -26,17 +26,6 @@
           {{/each ~}}
         {{/compare ~}}
       {{/each ~}}
-      {{#ifAny (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ~}}
-        {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
-          <h3 class="mdc-typography--headline7">Other</h3>
-        {{/compare ~}}
-        {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) ">=" 1 ~}}
-          {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
-        {{/compare ~}}
-        {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ">=" 1 ~}}
-          {{> term_checkbox slug="true" field="various_locations" selected=@root.request.params.query.various_locations instance_id=../instance_id value="Various locations"}}
-        {{/compare ~}}
-      {{/ifAny ~}}
     {{/if ~}}
   {{else}}
     {{#each (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat type "_slugs.buckets")) ~}}
@@ -46,26 +35,10 @@
     {{/each ~}}
   {{/compare ~}}
 </div>
-<div id="{{../instance_id}}-{{type}}-list">
-  <ul id="{{../instance_id}}-{{type}}-list-target">
-    {{#each (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat type "_slugs.buckets")) ~}}
-      {{#if (contains (getProperty @root.request.params.query ../type) key ) }}
-        <li>{{> list_item type=../type value=(lookup (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat ../type ".buckets")) @index)}}</li>
-      {{/if}}
-    {{/each ~}}
-  </ul>
-</div>
-{{/inline}}
-
-{{#*inline "list_item"}}
-  <div class="mdc-chip mdc-theme--primary-bg" tabindex="0" id="">
-    <div class="mdc-chip__text">{{value}}</div>
-    <i class="far fa-times-circle mdc-chip__icon mdc-chip__icon--trailing remove_element" tabindex="0" role="button"></i>
-  </div>
 {{/inline}}
 
 {{#*inline "availability_filter"}}
-  <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-availability-collapse" data-collapse-inverse="#{{../instance_id}}-availability-list" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
+  <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-availability-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
       Availability
     <span class="mdc-icon-toggle pull-right">
     <i class="far fa-chevron-{{#if @root.request.params.query.availability}}up{{else}}down{{/if}}" aria-hidden="true"></i>
@@ -78,16 +51,16 @@
 {{#*inline "term_checkbox"}}
   <div class="mdc-form-field">
     <div class="mdc-checkbox">
-      <input type="checkbox"  data-chip-checkbox-target="#{{../instance_id}}-{{field}}-list-target" data-list-content='{ "data" : {{#blockStringify this ~}}{{>list_item value=(default value.key value)}}{{~/blockStringify}} }' class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{slug}}"
+      <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{slug}}"
              field="{{field}}" slug="{{slug}}"
              name="{{#compare field "===" "type"}}{{field}}{{else}}{{field}}[]{{/compare}}" value="{{slug}}"{{#if (contains selected slug)}} checked{{/if}} />
       <div class="mdc-checkbox__background">
         <svg class="mdc-checkbox__checkmark"
-        viewBox="0 0 24 24">
-        <path class="mdc-checkbox__checkmark-path"
-        fill="none"
-        stroke="white"
-        d="M1.73,12.91 8.1,19.28 22.79,4.59"/></svg>
+             viewBox="0 0 24 24">
+          <path class="mdc-checkbox__checkmark-path"
+                fill="none"
+                stroke="white"
+                d="M1.73,12.91 8.1,19.28 22.79,4.59"/></svg>
         <div class="mdc-checkbox__mixedmark"></div>
       </div>
     </div>
