--- a/sites/configurations/volunteerscotland-search/partials/browse.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/browse.hbs
@@ -45,24 +45,26 @@
       <ul class="mdc-list">
         {{#each @root.data.opportunitySupplimentary.types.aggregations.countries.buckets ~}}
           {{#if key ~}}
-          {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">" 1 ~}}
+          {{!--#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">" 1 ~}}
             <li class="mdc-list-item mdc-list-item--{{@index}}">
               <h3 class="mdc-typography--headline7">{{{key}}}</h3>
             </li>
-            {{/compare ~}}
+            {{/compare ~ --}}
           {{/if ~}}
-          {{#each this.regions.buckets ~}}
-            {{#if key ~}}
-              <a class="mdc-list-item" href="/search?regions%5B%5D={{urlencode (slugify (replace key "/" "-"))}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../../eventContext "category-browser"}}', event_label: 'Region: {{slugify (replace key "/" "-")}}' })">
-                <span class="mdc-list-item__text">
-                  {{{key}}}
-                </span>
-                <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
-                  {{doc_count}}
-                </span>
-              </a>
-            {{/if ~}}
-          {{/each ~}}
+          {{#compare key "Scotland" ~}}
+            {{#each this.regions.buckets ~}}
+              {{#if key ~}}
+                <a class="mdc-list-item" href="/search?regions%5B%5D={{urlencode (slugify (replace key "/" "-"))}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../../eventContext "category-browser"}}', event_label: 'Region: {{slugify (replace key "/" "-")}}' })">
+                  <span class="mdc-list-item__text">
+                    {{{key}}}
+                  </span>
+                  <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
+                    {{doc_count}}
+                  </span>
+                </a>
+              {{/if ~}}
+            {{/each ~}}
+          {{/compare ~}}
         {{/each ~}}
       </ul>
     </div>
