Updates to policy page for Ilse

--- a/sites/configurations/scvo/partials/sector-stats.hbs
+++ b/sites/configurations/scvo/partials/sector-stats.hbs
@@ -2,7 +2,9 @@
   <div class="container-fluid">
     <h2>
       The Scottish third sector
-      <!-- <span class="mdc-typography--caption"></span> -->
+      <span class="mdc-typography--caption">
+        <a href="/projects-campaigns/i-love-charity/sector-stats">View the latest sector stats</a>
+      </span>
     </h2>
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner v-margin">
