--- a/sites/configurations/scvo/templates/pages/page-policy.hbs
+++ b/sites/configurations/scvo/templates/pages/page-policy.hbs
@@ -14,10 +14,19 @@
                 <a href="/projects-campaigns"><span class="fal fa-fw fa-flag fa-2x"> </span>Campaigns</a>
               </h1>
             </section>
-            <section class="mdc-card__supporting-text">
+            <!-- <section class="mdc-card__supporting-text">
               Learn more about our campaigns
+            </section> -->
+            <section class="mdc-card__actions">
+              <ul>
+                <li>
+                  <a class="mdc-card__action" href="/projects-campaigns">Find out more about our campaigns</a>
+                </li>
+                <li>
+                  <a class="mdc-card__action" href="/projects-campaigns/i-love-charity/sector-stats">View the latest sector stats</a>
+                </li>
+              </ul>
             </section>
-            <section class="mdc-card__actions"><a class="mdc-card__action" href="/projects-campaigns">Find out more</a></section>
           </div>
         </div>
       </div>
