altered search form to allow for collapsible non-scotland regions. Also moved Avaialability to the bottom so it's less intrusive if open

--- a/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
@@ -24,7 +24,15 @@
               {{> term_checkbox slug=key field="regions" selected=@root.request.params.query.regions instance_id=../../../instance_id value=(lookup ../this.regions.buckets @index)}}
             {{/if ~}}
           {{/each ~}}
+        {{else}}
+          <div class="mdc-typography--headline7 checkbox-collapse-element">Other</div>
+          {{#each this.regions_slugs.buckets ~}}
+            {{#if key ~}}
+              {{> term_checkbox slug=key field="regions" selected=@root.request.params.query.regions instance_id=../../../instance_id value=(lookup ../this.regions.buckets @index)}}
+            {{/if ~}}
+          {{/each ~}}
         {{/compare ~}}
+
       {{/each ~}}
     {{/if ~}}
   {{else}}
@@ -117,7 +125,6 @@
     <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}">
     <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}">
 
-    {{> availability_filter instance_id=instance_id ~}}
 
 
     {{> term_filter type="regions" instance_id=instance_id ~}}
@@ -140,6 +147,8 @@
     {{#each (split "work_types,client_groups,services,age_groups" ",") ~}}
       {{> term_filter type=this instance_id=instance_id ~}}
     {{/each ~}}
+
+    {{> availability_filter instance_id=instance_id ~}}
 
     <div class="v-margin-full">
       {{> term_checkbox slug="true" field="recently_updated" selected=@root.request.params.query.recently_updated instance_id=instance_id value="Only show opportunities updated in the last year" ~}}
