--- a/sites/configurations/scvo/templates/pages/page-digital.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital.hbs
@@ -167,6 +167,7 @@
               <section class="mdc-card__actions">
                 <ul>
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/creating-a-digitally-confident-third-sector-in-scotland-what-next">Read the Call to Action</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution">Get involved</a></li>
                 </ul>
               </section>
             </div>
