--- a/sites/configurations/scvo/templates/pages/page-digital.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital.hbs
@@ -200,12 +200,12 @@
               </section>
               <section class="mdc-card__supporting-text">
                 <p>
-                  From Facebook campaigns to Google Analytics, iConnect North East tell us what digital has to offer.
+                  Read practical examples of how organisations are adapting and evolving in our digital world.
                 </p>
               </section>
               <section class="mdc-card__actions">
                 <ul>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/digital-pioneers">More case studies</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/digital-pioneers">Read case studies</a></li>
                 </ul>
               </section>
             </div>
