--- a/sites/configurations/scvo/templates/pages/page-digital.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital.hbs
@@ -185,10 +185,10 @@
               </section>
               <section class="mdc-card__actions">
                 <ul>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/check-up">Digital Check-Up</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/check-up">Digital Check-up</a></li>
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/cyber-resilience">Cyber Resilience</a></li>
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/senior-leaders">Leaders Programme</a></li>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://charitycatalogue.com">Find Digital Tools</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://charitycatalogue.com">Find digital tools</a></li>
                 </ul>
               </section>
             </div>
