--- a/sites/configurations/scvo/partials/footer-gathering.hbs
+++ b/sites/configurations/scvo/partials/footer-gathering.hbs
@@ -9,7 +9,8 @@
           </h3>
           <p style="overflow:hidden;">
             <a href="https://www.ccla.co.uk" style="float:left;margin-right:8px;"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/ccla.png" height="75" /></a>
-            <a href="/the-gathering-2019/sponsorship" style="float:left;width:400px;overflow:hidden;"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/G2018-CM-sponsor-buttons.png" height="73" /></a>
+            <a href="https://www.keegan-pennykid.com" style="float:left;margin-right:8px;"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/KPlogo.png" height="75" /></a>
+            <a href="/the-gathering-2019/sponsorship" style="float:left;width:200px;overflow:hidden;"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/G2018-CM-sponsor-buttons.png" height="73" /></a>
           </p>
         </div>
       </div>
