Added missing fund

--- a/sites/configurations/scvo/templates/grants/data.hbs
+++ b/sites/configurations/scvo/templates/grants/data.hbs
@@ -28,6 +28,11 @@
         "downloadURL":"https://scvo.org/running-your-organisation/funding/community-capacity-resilience-fund/projects/data.json",
         "accessURL": "https://scvo.org/transparency-open-data",
         "title":"Community Capacity & Resilience Fund grants conforming to the 360Giving JSON Package Schema"
+      },
+      {
+        "downloadURL":"https://scvo.org/running-your-organisation/funding/carers-act-transformation-support-fund/projects/data.json",
+        "accessURL": "https://scvo.org/transparency-open-data",
+        "title":"Carers Acts Transformation Support Fund grants conforming to the 360Giving JSON Package Schema"
       }
     ]
   }
